# Fallout

./: Fallout.code-workspace  HardwareReport.md  README.md
Hardware/: Fallout.kicad_pro  Fallout.kicad_sch
Software/: .gitignore  CMakeLists.txt  CMakePresets.json
Software/components/MainClass/include/tx/: compute.h
Software/components/TXCSL_Engine/: CMakeLists.txt
Software/components/TXCSL_Engine/include/impl/: expression_evaluator.hpp
Software/components/TXCSL_Engine/include/tx/: csl_engine.h
Software/components/TXESP_Infrastructure/: CMakeLists.txt
Software/components/TXESP_Infrastructure/include/impl/: buffer.hpp  frame_composer.hpp  ili9488_driver_panel.hpp  text_renderer.hpp  usb_framework.hpp  usb_keyboard_input_handler.hpp
Software/components/TXESP_Infrastructure/include/tx/: esp.h
Software/components/TXLib/: CMakeLists.txt  add_txlib.cmake
Software/components/TXLib_Addons/: CMakeLists.txt
Software/components/TXLib_Addons/include/impl/: handle_system.hpp
Software/components/TXLib_Addons/include/tx/: addons.h
Software/components/TerminalEngine/: CMakeLists.txt
Software/components/TerminalEngine/include/tx/: terminal.h
Software/main/: CMakeLists.txt  idf_component.yml  main.cpp
